# dmats

./: dmats.cabal  stack.yaml
planning/: initial.md
src/DMats/: Types.hs
