name:                dmats
version:             0.1.0.0
synopsis:            Dependently typed compiled programming language for
                     matrix manipulation and linear algebra
description:         Please see README.md
homepage:            http://github.com/mstksg/dmats
license:             BSD3
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
copyright:           (c) Justin Le 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- executable dmats-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , dmats
--   default-language:    Haskell2010

test-suite dmats-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dmats
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mstksg/dmats
